// Football Tactical Intelligence — WC 2022 ERD (simplified)
// dbdiagram.io 붙여넣기용
// 변경 이력: oltp 제거, dim_* 제거, dim_formation → team_match_formation 재설계

Project football_wc2022 {
  database_type: 'PostgreSQL'
  Note: '''
    데이터: StatsBomb Open Data
    대회: FIFA World Cup 2022 (competition_id=43, season_id=106, 64경기)
    분석 대상: 전체 32개국 (라인업 추천 시 상대 = 월드컵 참가국)

    [집계 흐름]
    staging.events (~250k rows)
      + staging.match_lineups
      + staging.match_lineup_positions
      → ETL aggregate
      → analytics.fact_player_match_stats (~2k rows)

    [제거 항목 및 이유]
    - oltp.teams / oltp.players: 월드컵은 클럽 운영 시스템이 아님.
      신체정보·시장가치·부상 이력은 StatsBomb에 없고,
      합성 데이터는 포트폴리오 약점이 됨.
    - analytics.dim_*: 2k행 팩트에 스타 스키마는 과설계.
      분석 쿼리에서 staging 직접 JOIN으로 충분.
    - analytics.dim_formation: 팩트 FK 연결 시 포메이션 변경(Tactical Shift)
      시점이 모호해짐 → team_match_formation 타임라인 테이블로 대체.
  '''
}

// =============================================================================
// STAGING (Silver) — StatsBomb 원천
// =============================================================================

TableGroup staging [color: #3498DB] {
  staging.competitions
  staging.seasons
  staging.teams
  staging.players
  staging.matches
  staging.events
  staging.match_lineups
  staging.match_lineup_positions
  staging.ingestion_runs
}

Table staging.competitions {
  competition_id int [pk, note: 'WC2022=43']
  competition_name varchar [not null]
  country_name varchar
  competition_gender varchar
  data_source varchar [default: 'statsbomb_open']
  ingested_at timestamptz

  Note: '대회 마스터'
}

Table staging.seasons {
  competition_id int [pk, ref: > staging.competitions.competition_id,
    note: '복합 PK. 다른 대회 season_id 충돌 방지']
  season_id int [pk, note: 'WC2022=106']
  season_name varchar [not null, note: '2022']

  Note: '시즌. PK=(competition_id, season_id) 복합키로 확장성 확보'
}

Table staging.teams {
  team_id int [pk]
  team_name varchar [not null]
  team_gender varchar
  country_name varchar
  data_source varchar [default: 'statsbomb_open']
  ingested_at timestamptz

  Note: '32개 국가대표팀'
}

Table staging.players {
  player_id int [pk]
  player_name varchar [not null]
  player_nickname varchar
  country_name varchar
  data_source varchar [default: 'statsbomb_open']
  ingested_at timestamptz

  Note: 'WC 출전 선수 마스터 (~800명)'
}

Table staging.matches {
  match_id int [pk]
  competition_id int [not null, ref: > staging.competitions.competition_id]
  season_id int [not null, ref: > staging.seasons.season_id]
  match_date date [not null]
  kick_off time
  home_team_id int [not null, ref: > staging.teams.team_id]
  away_team_id int [not null, ref: > staging.teams.team_id]
  home_score int
  away_score int
  match_status varchar
  competition_stage varchar [not null, note: 'Group Stage | Round of 16 | ... | Final']
  match_week int
  stadium_name varchar
  referee_name varchar
  data_source varchar [default: 'statsbomb_open']
  ingested_at timestamptz

  indexes {
    (competition_id, season_id) [name: 'idx_matches_comp_season']
    (match_date) [name: 'idx_matches_date']
    (home_team_id) [name: 'idx_matches_home']
    (away_team_id) [name: 'idx_matches_away']
  }

  Note: '64경기. 상대·일자·홈어웨이·대회 스테이지'
}

Table staging.events {
  event_id uuid [pk, note: 'StatsBomb id']
  match_id int [not null, ref: > staging.matches.match_id]
  index int [not null, note: '경기 내 이벤트 순서']
  period smallint [not null, note: '1=전반 2=후반 3~4=연장 5=승부차기']
  timestamp varchar
  minute smallint
  second smallint
  type varchar [not null, note: 'Pass | Shot | Pressure | Dribble | ...']
  team_id int [ref: > staging.teams.team_id]
  player_id int [ref: > staging.players.player_id]
  location_x decimal(6,2) [note: '0-120']
  location_y decimal(6,2) [note: '0-80']
  duration decimal(8,3)
  under_pressure boolean
  outcome varchar [note: 'pass_outcome / shot_outcome 통합']
  shot_statsbomb_xg decimal(6,4)
  payload jsonb [not null, default: '{}',
    note: '타입별 sparse 속성 전부. ETL에서 파싱']
  ingested_at timestamptz

  indexes {
    (match_id) [name: 'idx_events_match']
    (match_id, index) [name: 'idx_events_match_index']
    (match_id, type, player_id) [name: 'idx_events_match_type_player']
    (player_id, match_id) [name: 'idx_events_player_match']
  }

  Note: '''
    ★ Raw fact. WC2022 전체 ~250k rows (경기당 3.5~4.5k)
    집계 ETL의 입력. 분석 쿼리는 이 테이블 직접 스캔하지 않음.
    공통 속성만 컬럼화, 나머지는 payload jsonb에 흡수.
  '''
}

Table staging.match_lineups {
  lineup_id int [pk, increment]
  match_id int [not null, ref: > staging.matches.match_id]
  team_id int [not null, ref: > staging.teams.team_id]
  player_id int [not null, ref: > staging.players.player_id]
  jersey_number smallint
  is_starter boolean [not null, default: false]

  indexes {
    (match_id, team_id, player_id) [unique, name: 'uq_lineup_match_team_player']
    (match_id, team_id) [name: 'idx_lineup_match_team']
  }

  Note: '경기 스쿼드. 선발 여부 식별'
}

Table staging.match_lineup_positions {
  lineup_position_id int [pk, increment]
  lineup_id int [not null, ref: > staging.match_lineups.lineup_id]
  position_name varchar [not null, note: 'Right Back | Centre Forward | ...']
  statsbomb_position_id int
  from_period smallint
  from_minute smallint
  to_period smallint
  to_minute smallint
  start_reason varchar [note: 'Starting XI | Tactical Shift | Injury Substitution | ...']
  end_reason varchar

  indexes {
    (lineup_id) [name: 'idx_positions_lineup']
  }

  Note: '''
    포지션·교체 시간 구간.
    minutes_played 정확 집계에 사용.
    예: 골키퍼가 퇴장 후 필드플레이어가 대체 → 구간으로 기록
  '''
}

Table staging.ingestion_runs {
  run_id int [pk, increment]
  source varchar [not null, default: 'statsbomb_open']
  competition_id int [not null]
  season_id int [not null]
  started_at timestamptz [not null]
  finished_at timestamptz
  status varchar [not null, note: 'running | success | failed']
  matches_processed int [default: 0]
  events_processed int [default: 0]
  error_message text

  Note: '''
    배치 멱등·재처리 추적.
    동일 (competition_id, season_id) 재실행 시
    이전 run 상태 확인 후 중복 적재 방지.
  '''
}

// =============================================================================
// ANALYTICS (Gold) — 집계 + AI
// =============================================================================

TableGroup analytics [color: #E74C3C] {
  analytics.fact_player_match_stats
  analytics.team_match_formation
  analytics.embedding_documents
}

Table analytics.fact_player_match_stats {
  match_id int [pk, not null, ref: > staging.matches.match_id]
  player_id int [pk, not null, ref: > staging.players.player_id]
  team_id int [not null, ref: > staging.teams.team_id]

  minutes_played decimal(6,2) [not null, default: 0]
  is_starter boolean [not null, default: false]
  position_played varchar [note: 'match_lineup_positions에서 주 포지션']

  passes_attempted int [not null, default: 0]
  passes_completed int [not null, default: 0]
  pass_completion_rate decimal(5,4)
  progressive_passes int [default: 0]

  shots int [not null, default: 0]
  shots_on_target int [not null, default: 0]
  goals int [not null, default: 0]
  assists int [not null, default: 0]
  xg decimal(6,4) [default: 0]
  xa decimal(6,4) [default: 0]

  tackles int [default: 0]
  interceptions int [default: 0]
  pressures int [default: 0]
  blocks int [default: 0]

  dribbles_attempted int [default: 0]
  dribbles_completed int [default: 0]
  carries int [default: 0]

  yellow_cards smallint [not null, default: 0]
  red_cards smallint [not null, default: 0]

  aggregated_at timestamptz [not null]

  indexes {
    (match_id, player_id) [pk, name: 'pk_fpms']
    (player_id, match_id) [name: 'idx_fpms_player_match']
    (team_id, match_id) [name: 'idx_fpms_team_match']
    (match_id, team_id, player_id) [name: 'idx_fpms_cover',
      note: 'DDL에서 INCLUDE(xg, passes_attempted, passes_completed) 추가']
  }

  Note: '''
    ★★ 핵심 OLAP 팩트
    Grain: match_id × player_id (경기별 선수 1행)
    ~2,000 rows (vs staging.events ~250,000 rows)

    ETL: staging.events type별 COUNT/SUM → 이 테이블
    라인업 추천 분석 쿼리의 진입점.

    FK는 staging 원천 ID 직접 참조.
    dim 테이블 없이 staging JOIN으로 충분한 규모.
  '''
}

Table analytics.team_match_formation {
  match_id int [pk, not null, ref: > staging.matches.match_id,
    note: '복합 PK']
  team_id int [pk, not null, ref: > staging.teams.team_id]
  from_minute smallint [pk, not null, default: 0,
    note: '0 = 킥오프부터']
  to_minute smallint [note: 'NULL = 경기 종료까지']
  formation_code varchar [not null, note: '433 | 4231 | 352 | ...']
  source_event_type varchar [not null,
    note: 'Starting XI | Tactical Shift']

  indexes {
    (match_id, team_id) [name: 'idx_tmf_match_team']
    (match_id, team_id, from_minute) [name: 'idx_tmf_timeline']
  }

  Note: '''
    경기×팀 포메이션 타임라인.
    fact와 FK 없이 분리 → 분석 쿼리에서 JOIN.

    [분리 이유]
    포메이션은 경기 중 변경(Tactical Shift) 가능.
    fact FK로 연결하면 "어느 시점 포메이션이냐" 모호.
    from_minute / to_minute 구간으로 기록해 명확하게 관리.

    [활용 예]
    상대가 후반 60분에 4-3-3 → 3-5-2로 바꿨을 때
    우리 팀 대응 라인업 추천 시 컨텍스트로 활용.
  '''
}

Table analytics.embedding_documents {
  doc_id int [pk, increment]
  doc_type varchar [not null,
    note: 'match_report | tactical_pattern | player_profile']
  ref_id int [not null,
    note: 'match_id or player_id. doc_type에 따라 결정']
  content text [not null,
    note: '임베딩할 자연어 텍스트. ETL에서 생성']
  embedding vector(1536) [
    note: 'pgvector. DDL: CREATE EXTENSION vector']
  metadata jsonb
  created_at timestamptz

  indexes {
    (doc_type, ref_id) [name: 'idx_emb_type_ref']
  }

  Note: '''
    RAG용 벡터 저장소. Phase 5.
    SQL 집계(fact) + 벡터 검색(embedding)을 조합해
    LLM에 컨텍스트 주입 → 라인업 추천 + 근거 생성.

    HNSW 인덱스는 DDL에서 별도 생성:
    CREATE INDEX ON embedding_documents
      USING hnsw (embedding vector_cosine_ops);

    임베딩 대상 예시:
    - match_report: 한국 vs 가나전, 후반 측면 압박 취약
    - tactical_pattern: 4-3-3 상대 측면 돌파 대응 패턴
    - player_profile: 손흥민 xG 0.8, 드리블 성공률 71%
  '''
}

// =============================================================================
// ETL 흐름 (논리적 — FK 아님, 주석으로 표현)
// =============================================================================
// staging.events  ──ETL──▶ analytics.fact_player_match_stats
// staging.events  ──ETL──▶ analytics.team_match_formation
// analytics.fact  ──자연어화──▶ analytics.embedding_documents